// gold-wallet.proto

syntax = "proto3";

package goldWallet;

// Request message for getting gold balance
message GoldBalanceRequest {
    string user_id = 1; // The ID of the user
}

// Request message for adding or subtracting gold
message GoldRequest {
    string user_id = 1;       // The ID of the user
    int64 gold_amount = 2;    // The amount of gold to add or subtract
}

// Response message for balance-related requests
message GoldBalanceResponse {
    int64 golds = 1;          // The user's gold balance
}

// Response message for add/subtract gold operations
message GoldUpdateResponse {
    string message = 1;       // Operation result message
}

// GoldWalletService definition
service GoldWalletService {
    rpc GetGoldBalance (GoldBalanceRequest) returns (GoldBalanceResponse);
    rpc AddGold (GoldRequest) returns (GoldUpdateResponse);
    rpc SubtractGold (GoldRequest) returns (GoldUpdateResponse);
}
